deployments/client-vue/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-frontend
  namespace: demo-app
  labels:
    app: vue-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-frontend
  template:
    metadata:
      labels:
        app: vue-frontend
    spec:
      containers:
        - image: rumsauce/test:client-vue
          name: vue-frontend
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8080
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-conf
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - configMap:
            defaultMode: 420
            name: nginx-conf
          name: nginx-conf
