deployments/client-vue/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-frontend
  namespace: demo-app
spec:
  selector:
    app: vue-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
